--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "docker_better_next",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,7 +17,7 @@
     "@better-auth/passkey": "^1.4.6",
     "@better-auth/stripe": "^1.4.6",
     "@hookform/resolvers": "^5.2.2",
-    "@next/env": "^16.0.7",
+    "@next/env": "^16.0.10",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -29,17 +32,17 @@
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
-    "better-auth": "^1.3.34",
+    "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.548.0",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "react-qr-code": "^2.0.18",
     "resend": "^6.5.2",
@@ -54,11 +57,11 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
     "drizzle-kit": "^0.31.6",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
